Checkpoint save: Admin dashboard project completed - Minor UI tweaks. - Project text size edit to prevent overflow. - Set repeat with auto-fit value to project grid - Set default theme (dark). - UI design completed. - Added extra dark theme. - currently bug hunting. - Next step: restart with TOP lessons

--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@
     --primary-white: #ffffff;
     --separator-color: oklch(80% 0 150);
     --img-profiles-border: black;
-    --paragraph-p-color: oklch(40% 0 0); 
+    --paragraph-p-color: oklch(40% 0 0);
+    --shadow-color: "";
+    --shadow-hover: "";
 }
 
 .white {
@@ -36,6 +38,8 @@
     --separator-color: oklch(80% 0 150);
     --img-profiles-border: black;
     --paragraph-p-color: oklch(40% 0 0);
+    --shadow-hover: 1px 2px 4px oklch(35% 1% 120 / 50%);
+    --shadow-color: 1px 2px 4px oklch(75% 1% 120 / 50%);
 }
 
 .dark {
@@ -58,6 +62,8 @@
     --img-profiles-border: oklch(63.7% 0.237 25.331);
     --paragraph-p-color: oklch(98.4% 0.003 247.858);
     background-color: var(--white-bg-color);
+    --shadow-color: 1px 2px 4px oklch(35% 1% 120 / 50%);
+    --shadow-hover: 1px 2px 4px oklch(75% 1% 120 / 50%)
 }
 
 * {
@@ -101,11 +107,15 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 3rem 1fr;
     width: 100%;
-    height: fit-content;
+    height: 100%; 
     justify-self: center;
     justify-content: center;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem 2rem 0 2rem;
+    margin: 0;
+    z-index: 1;
+    box-shadow: var(--shadow-color);
+    
 }
 
 .prime-container {
@@ -116,11 +126,11 @@ body {
     justify-content: center;
     align-items: center;
     /* padding: 0 1.5rem; */
-    height: fit-content; 
-    padding: 0 0 2rem 1rem;
+    height: 100%;  
+    padding: 2rem 0 2rem 1rem; 
     grid-template-columns: 70% 30%;
     grid-template-rows: 1fr;
-    margin: 2rem 0 0 0 ;
+    margin: 0;
     
 }
 
@@ -162,16 +172,19 @@ body {
     flex-direction: column;
     justify-content: space-between;
     border-width: 1px 1px 1px 10px;
-    box-shadow: 1px 2px 4px oklch(75% 1% 120 / 50%);
+    box-shadow: var(--shadow-color);  
     font-size: min(0.9rem);  
     
 }
-
-.project:hover, .content-wrapper:hover {
-    cursor: pointer;
+ 
+.project:hover, .content-wrapper:hover { 
     border-width: 15px;
-    box-shadow: 1px 2px 4px oklch(75% 1% 120 / 50%);  
+    box-shadow: var(--shadow-hover);  
     border-radius: 8px; 
+}
+
+.content-wrapper:hover, .mini-icon {
+    cursor: pointer; 
 }
 
 .box-title {
@@ -259,7 +272,6 @@ body {
     align-items: center;
     min-width: 100%;
     height: 3rem;
-    
 
 }
 
